<resources>
    <string name="app_meari_name">XTest</string>
    <string name="app_exitapp">对不起，程序异常退出</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="please_wait">请稍等</string>
    <string name="error_1001">请求成功</string>
    <string name="error_1002">服务器处理失败，稍后请重试</string>
    <string name="error_1003">参数不合法</string>
    <string name="error_1004">验证码存在</string>
    <string name="error_1005">系统异常</string>
    <string name="error_1006">数据库异常</string>
    <string name="error_1007">账号不存在</string>
    <string name="error_1008">验证码错误</string>
    <string name="error_1009">验证码超时</string>
    <string name="error_1010">已经是朋友</string>
    <string name="error_1011">好友请求已发送，等待对方处理</string>
    <string name="error_1012">处理消息成功</string>
    <string name="error_1013">设备已经存在</string>
    <string name="error_1014">有未读消息</string>
    <string name="error_1015">没有未读消息</string>
    <string name="error_1016">请求已发送，请等待对方处理</string>
    <string name="error_1017">密码错误</string>
    <string name="error_1018">账号不存在</string>
    <string name="error_1019">账户已经存在</string>
    <string name="error_1020">密码正确</string>
    <string name="error_1021">设备已经属于自己</string>
    <string name="error_1022">不能添加自己为好友</string>
    <string name="error_1023">您的账号在其他地方登录，请重新登录</string>
    <string name="error_1024">请查看您的好友请求</string>
    <string name="error_1025">钱的数据错误</string>
    <string name="error_1026">订单超时</string>
    <string name="error_1027">订单数据错误</string>
    <string name="error_1028">未付款</string>
    <string name="error_1029">处于试用中</string>
    <string name="error_1030">不能识别该设备</string>
    <string name="error_1031">邮箱不存在</string>
    <string name="error_1032">NVR绑定IPC数量超过最大值</string>
    <string name="error_1033">没有权限</string>
    <string name="error_1035">设备离线</string>
    <string name="error_1036">设备在线</string>
    <string name="error_1037">登陆二维码失效或者超时，请重新获取扫描!</string>
    <string name="error_1039">操作过于频繁，请60秒后重试</string>
    <string name="error_1040">不是您的好友</string>
    <string name="motion">移动侦测</string>
    <string name="pir">人体侦测</string>
    <string name="search_finished">为搜索到设备</string>
    <string name="search_finished_warning">没有搜索到设备，是否重新搜索?</string>
    <string name="back">返回</string>
    <string name="network_unavailable">网络错误，请检查网络设置.</string>
    <string name="network_server_unavailable">网络或服务器繁忙，请检查网络设置.</string>
    <string name="share">分享</string>
    <string name="delete">删除</string>
    <string name="scanning">正在扫描</string>
    <string name="scanning_title">扫描设备</string>
    <string name="inputsn">输入 SN</string>
    <string name="devicesn">设备 SN</string>
    <string name="sn">SN</string>
    <string name="inputcamerapassword">输入密码</string>
    <string name="admin">admin</string>
    <string name="username">昵称</string>
    <string name="scan_failed">搜索失败</string>
    <string name="getfailedstr">加载失败</string>
    <string name="pps_waite">请稍等...</string>
    <string name="sversion">系统版本</string>
    <string name="agree">同意</string>
    <string name="disagree">拒绝</string>
    <string name="deviceAlias">/别名/</string>
    <string name="waiting">请稍等</string>
    <string name="loginfail">登陆失败</string>
    <string name="register_name_digits"> _@.0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ
    </string>
    <string name="status_failure_try_again">连接设备失败，请重新连接设备.</string>
    <string name="pps_str_default_list_no_data">没有数据，稍后请重试</string>
    <string name="immediate_experience">立刻体验>></string>
    <string name="skip">跳过</string>
    <string name="loading">加载中</string>
    <string name="AccountNumber">邮箱/手机</string>
    <string name="Registration">注册账户</string>
    <string name="GetPassword">忘记密码</string>
    <string name="password">密码</string>
    <string name="pps_login">登录</string>
    <string name="accountInfoFail">账号必须是邮箱或手机号</string>
    <string name="accountIsNull">账号不能为空</string>
    <string name="passIsNull">密码不能为空</string>
    <string name="password_hint">密码长度为6-20位</string>
    <string name="Interval">|</string>
    <string name="save">保存</string>
    <string name="update_version">升级</string>
    <string name="waite">请稍等</string>
    <string name="download_later">以后再说</string>
    <string name="download_warning">App升级需要存储权限</string>
    <string name="download_failed">下载失败</string>
    <string name="cancelDeviceDes">取消分享设备.</string>
    <string name="toast_pub_success">Published message: %1$s to topic: %2$s</string>
    <string name="toast_sub_success">Subscribed to %1$s</string>
    <string name="toast_pub_failed">Failed to publish message: %1$s to topic: %2$s</string>
    <string name="toast_sub_failed">Failed to subscribe to %1$s</string>
    <string name="timestamp"><![CDATA[&lt;br/&gt; &lt;small&gt; %1$s &lt;/small&gt;]]></string>
    <string name="exit_app">再按一次退出程序.</string>
    <string name="toast_disconnected">Disconnected</string>
    <string name="camera_title">摄像机</string>
    <string name="nvr_title">网络存储器</string>
    <string name="baby_title">婴儿监护器</string>
    <string name="message_title">消息</string>
    <string name="friends_title">好友</string>
    <string name="more_title">更多</string>
    <string name="flip">上下翻转</string>
    <string name="off">关</string>
    <string name="medium">中</string>
    <string name="high">高</string>
    <string name="low">低</string>
    <string name="connection_lost">%1$s has lost connection to %2$s</string>
    <string name="photo_save">截图保存在 :</string>
    <string name="record_save">录像保存 :</string>
    <string name="delete_file">删除文件...</string>
    <string name="alarm_msg">报警消息</string>
    <string name="alarm_msg_sys">系统消息</string>
    <string name="addFriendDes">请求添加好友.</string>
    <string name="agreeFriendDes">同意添加好友.</string>
    <string name="cancelFriendDes">拒绝添加好友.</string>
    <string name="addDeviceDes">请求分享设备</string>
    <string name="agreeDeviceDes">同意分享设备</string>
    <string name="sure_delete_meg">删除选中消息</string>
    <string name="pps_reject">拒绝</string>
    <string name="pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_release_label">放开以刷新…</string>
    <string name="pull_to_refresh_refreshing_label">正在载入…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">上拉可以加载</string>
    <string name="pull_to_refresh_from_bottom_release_label">松开载入更多</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label"> @string/pull_to_refresh_refreshing_label </string>
    <string name="load_failed">加载失败，请点我重试</string>
    <string name="load_end">没有更多数据</string>
    <string name="add_camera">添加摄像机</string>
    <string name="meari_add">添加</string>
    <string name="scan_qr">扫描二维码</string>
    <string name="no_camera">当前没有设备</string>
    <string name="logout">退出登录</string>
    <string name="account">账号</string>
    <string name="userNick">昵称</string>
    <string name="changepassword">更改密码</string>
    <string name="camera">拍照</string>
    <string name="gallery">相册</string>
    <string name="getVerification">获取验证码</string>
    <string name="verificationCode">验证码</string>
    <string name="reenter_password">重复密码</string>
    <string name="finish">完成</string>
    <string name="account_title">个人中心</string>
    <string name="nicknameIsNull">请填写昵称</string>
    <string name="name_format_error">请输入合法的用户名</string>
    <string name="niname_unchanged">昵称未修改</string>
    <string name="pps_quit_content">退出后不会删除任何历史数据，下次登录依然可以使用本帐号</string>
    <string name="edit_success">修改成功</string>
    <string name="change_pic">修改头像</string>
    <string name="edit_nickname_title">修改昵称</string>
    <string name="password_title">修改密码</string>
    <string name="velidateIsNull">请填写验证码</string>
    <string name="changepassword_suc">密码修改成功</string>
    <string name="passIsNotEqual">两次密码输入不一致</string>
    <string name="content_wifi">接通设备电源后，请等待3到10秒，确认状态指示灯由原来的红色常亮变为红色慢闪后，点击下一步.</string>
    <string name="next">下一步</string>
    <string name="help_warning">指示灯处于其他状态时帮助说明</string>
    <string name="camera_setting">启动设备</string>
    <string name="manual">手动添加</string>
    <string name="wifi_tip">请确保手机连接的是2.4G wifi网络</string>
    <string name="routerWifi">请输入WiFi密码</string>
    <string name="location_waring">程序需要获取定位信息，是否去应用信息->权限管理里面获取定位权限</string>
    <string name="ssid_pwd_null">WiFi名称不能为空</string>
    <string name="txt_ap_desc_title">将手机连接到设备热点</string>
    <string name="text_try_manual">尝试手动添加</string>
    <string name="txt_ap_desc">1.打开手机无线局域网设置 \n2.连接下图显示的Wi-Fi</string>
    <string name="connect_wifi_worning">打开手机“设置-无线局域网”，选择热点网络</string>
    <string name="no_connect_worning">设备未连接？请参考帮助</string>
    <string name="back_app_worning">3.返回本应用，继续添加设备</string>
    <string name="go_connet">去连接</string>
    <string name="no_device_dlg">设备未找到</string>
    <string name="no_device_message">未找到设备，请尝试手动添加或重试一次</string>
    <string name="redo">再试一次</string>
    <string name="found_tips">设备未连接，请参看帮助</string>
    <string name="ssid">WiFi</string>
    <string name="editssid_tip">请连接WiFi</string>
    <string name="editpwd_tip">输入密码</string>
    <string name="auto_wifi">自动获取</string>
    <string name="ap_desc">如果没有找到设备，请尝试二维码添加</string>
    <string name="tocamera">返回列表</string>
    <string name="my_camera">我的设备</string>
    <string name="addad">已添加</string>
    <string name="shared">已分享</string>
    <string name="shareing">分享中</string>
    <string name="unAdd">添加</string>
    <string name="unshare">未分享</string>
    <string name="add_suc">添加设备成功</string>
    <string name="waiting_deal_share">等待好友处理!</string>
    <string name="no_device_message_try">未找到设备，重试一次</string>
    <string name="ap_frist_content">设备复位后点按复位键，看到蓝灯缓慢闪烁，进入手动配置模式</string>
    <string name="help_reset">① 长按机身复位键5秒</string>
    <string name="help_netword">② 听到复位提示音后\n开始配置Wi-Fi网络</string>
    <string name="help_desc">智能摄像机指示灯状态\n  1.重置 \n○长按复位键5秒，听到“嘟嘟”声看到指示灯红灯闪烁，听到复位提示音后表示重置成功；\n2.智能配网 \n○指示灯红灯缓慢闪烁（每秒2次），表示进入默认模式；\n○指示灯红灯快速闪烁（每秒4次），表示进入配网模式；\n○指示灯变为蓝灯长亮，表示WiFi网络配置成功\n3.手动模式 \n○默认模式下，点按复位键，直至指示灯由红灯缓慢闪烁变蓝灯缓慢闪烁，表示切换到手动模式；\n○指示灯蓝灯缓慢闪烁（每秒2次），表示进入手动模式；\n○指示灯蓝灯快速闪烁（每秒4次），表示进入配网模式； \n○指示灯变为蓝灯长亮，表示WiFi网络配置成功；\n4.连接网线 \n○设备连接网线，指示灯变为蓝灯长亮，表示网络连接成功。</string>
    <string name="help_title">查看帮助</string>
    <string name="qrcode_waring">请将手机上的二维码对准设备镜头，保持15cm左右距离，勿晃动</string>
    <string name="qrcode_deal_waring">请将手机上的二维码在摄像头前方15cm处正对摄像头</string>
    <string name="qrcode_deal_success">如果扫描成功，设备会有“嘟嘟”声音提示，请点击“下一步”，如果失败，请返回上一步重新开始</string>
    <string name="battery_lock">电池锁</string>
    <string name="bell_lowpower_mode">低功耗模式</string>
    <string name="desc_bell_low_mode">低功耗模式开启后，app远程唤醒功能不可用，以达到最低功耗和最大工作时间；此模式下如需再次修改门铃设置，请手动按下门铃后再进入app进行设置；</string>
    <string name="bell_power_from">供电方式</string>
    <string name="bell_power_overplus">电量剩余</string>
    <string name="bell_expect_day">预计剩余 %1$s 天</string>
    <string name="desc_bell_lock">电池盒与门铃对接后，会自动上锁以防止外人拆卸电池。如需要取下电池盒，需要在app内进行解锁。\n如需要在电池没有电的情况下解锁，可使用外置USB接口临时供电，再进行解锁操作。</string>
    <string name="hint_bell_lock">防止人为拆卸电池，门铃安装电池盒后自动上锁</string>
    <string name="str_bellLock">点击按钮进行解锁操作</string>
    <string name="device_status">启动设备等待指示灯处于慢速闪烁状态</string>
    <string name="status_led_device">①状态灯含义</string>
    <string name="status_content">红灯慢闪：设备处于待配网状态\n红灯快闪：设备正在配网 \n红灯常亮：设备网络异常\n蓝灯常亮：设备网络正常</string>
    <string name="add_device_failed">②添加设备不成功</string>
    <string name="add_device_failed_content" >1) 请检查WIFI密码是否正确\n2) 请确认路由器为2.4G频段\n3) 请确保设备和手机靠近路由器\n4) 设备如果蓝灯常亮，但不能添加，只能请求分享，说明设备已经被其他人添加</string>
    <string name="free_band_device">③解绑设备</string>
    <string name="free_band_device_content">设备只能绑定一个APP账号，如果需要其他人添加，必须在原有账号中删除设备，进行解绑</string>
    <string name="reset_status">④复位设备</string>
    <string name="reset_content">设备网络异常或需要更换WIFI时，可以长按reset 4s，等设备发出提示音后松开，复位设备</string>
    <string name="sceen_status">⑤常见场景</string>
    <string name="chang_jiang_content">1）变更换WIFI(例如设备从家中转移主人不到办公室)：需要reset设备，重新配网；\n2）WIFI不变，主人变化（例如设备从爸爸账号转移给妈妈账号）：需要爸爸账号里面删除设备，然后妈妈账号里面按照正常WIFI配网设备或利用扫一扫功能，扫描设备机身上二维码添加；\n3）主人和WIFI同时变更（例如将设备赠送给别人）：需要同时在APP里面删除设备和Reset设备。 </string>
</resources>