<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/activity_actionbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dp16">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="@dimen/dp8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status_led_device"
                android:textColor="@color/com_blue" />

            <TextView
                style="@style/text_small_style"
                android:layout_marginTop="@dimen/dp4"
                android:lineSpacingExtra="@dimen/dp2"
                android:text="@string/status_content"
                android:textColor="@color/light_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp8"
                android:text="@string/add_device_failed"
                android:textColor="@color/com_blue" />

            <TextView
                style="@style/text_small_style"
                android:layout_marginTop="@dimen/dp4"
                android:lineSpacingExtra="@dimen/dp2"
                android:text="@string/add_device_failed_content"
                android:textColor="@color/light_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp8"
                android:text="@string/free_band_device"
                android:textColor="@color/com_blue" />

            <TextView
                style="@style/text_small_style"
                android:layout_marginTop="@dimen/dp4"
                android:lineSpacingExtra="@dimen/dp2"
                android:text="@string/free_band_device_content"
                android:textColor="@color/light_gray" />

            <TextView
                android:layout_marginTop="@dimen/dp8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset_status"
                android:textColor="@color/com_blue" />

            <TextView
                style="@style/text_small_style"
                android:layout_marginTop="@dimen/dp4"
                android:lineSpacingExtra="@dimen/dp2"
                android:text="@string/reset_content"
                android:textColor="@color/light_gray" />
            <TextView
                android:layout_marginTop="@dimen/dp8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sceen_status"
                android:textColor="@color/com_blue" />

            <TextView
                style="@style/text_small_style"
                android:layout_marginTop="@dimen/dp4"
                android:lineSpacingExtra="@dimen/dp2"
                android:text="@string/chang_jiang_content"
                android:textColor="@color/light_gray" />
        </LinearLayout>


    </ScrollView>


</LinearLayout>
