<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <include layout="@layout/activity_actionbar" />

        <TextView
            style="@style/text_big_style_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp36"
            android:gravity="center"
            android:lineSpacingExtra="3dp"
            android:text="@string/txt_ap_desc_title" />

        <TextView
            style="@style/text_normal_dark_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp8"
            android:lineSpacingExtra="3dp"
            android:text="@string/txt_ap_desc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp32"
                android:src="@mipmap/ic_step_sec" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp16"
                android:layout_marginRight="@dimen/dp16"
                android:layout_marginTop="@dimen/dp16"
                android:gravity="center"
                android:text="@string/connect_wifi_worning"
                android:textColor="@color/light_gray"
                android:textSize="@dimen/sp14" />

            <TextView
                android:id="@+id/text_nonecnting_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp16"
                android:layout_marginRight="@dimen/dp16"
                android:layout_marginTop="@dimen/dp8"
                android:gravity="center"
                android:padding="@dimen/dp8"
                android:text="@string/no_connect_worning"
                android:textColor="@color/com_blue"
                android:textSize="@dimen/sp14" />

            <TextView
                style="@style/text_normal_dark_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp16"
                android:text="@string/back_app_worning" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/loading_dialog_img"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:indeterminateDrawable="@drawable/progress_loading_style"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/loading_ok_img"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:src="@mipmap/img_loading_success"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/loading_failed_img"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:src="@mipmap/img_loading_failed"
            android:visibility="gone" />

        <TextView
            android:id="@+id/pps_next"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dp32"
            android:layout_marginLeft="@dimen/dp60"
            android:layout_marginRight="@dimen/dp60"
            android:layout_marginTop="@dimen/dp8"
            android:background="@drawable/btn_common_big"
            android:contentDescription="@string/app_meari_name"
            android:gravity="center"
            android:text="@string/go_connet"
            android:textColor="@color/white"
            android:textSize="@dimen/sp15" />
    </LinearLayout>

</RelativeLayout>