<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <include
            layout="@layout/activity_actionbar"
            android:layout_width="match_parent"
            android:layout_height="48dp"></include>

        <ImageView style="@style/common_line_vertical" />


        <TextView
            android:background="@color/yellow_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/dp16"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/dp4"
            android:padding="@dimen/dp4"
            android:text="@string/qrcode_waring"
            android:textColor="@color/com_yellow"
            android:textSize="@dimen/sp14" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp4"
            android:gravity="center"
            android:text="@string/qrcode_deal_waring"
            android:textColor="@color/font_dark"
            android:textSize="@dimen/sp14"
            android:visibility="gone" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginRight="@dimen/dp16"
            android:layout_marginTop="@dimen/dp32"
            android:background="@drawable/bg_content"
            android:padding="@dimen/dp12">

            <ImageView
                android:id="@+id/qrcode_image"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:scaleType="fitXY" />
        </RelativeLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp32"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/dp2"
            android:text="@string/qrcode_deal_success"
            android:textColor="@color/light_gray"
            android:textSize="@dimen/sp13" />

        <TextView
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/dp10"
            android:layout_marginLeft="@dimen/dp60"
            android:layout_marginRight="@dimen/dp60"
            android:layout_marginTop="@dimen/dp32"
            android:background="@drawable/btn_common_big"
            android:contentDescription="@string/app_meari_name"
            android:gravity="center"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="@dimen/sp14"
            android:visibility="visible" />
    </LinearLayout>
</ScrollView>