<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        layout="@layout/activity_actionbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp48" />

    <ImageView style="@style/common_line_vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffeedd"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_bell_lock"
            android:textColor="#ff9900"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp66"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_weight="1"
            android:text="@string/battery_lock"
            android:textColor="@color/font_dark"
            android:textSize="@dimen/sp16" />

        <com.meari.test.widget.SwitchButton
            android:id="@+id/switch_lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp16"
            android:checked="true" />

    </LinearLayout>

    <ImageView style="@style/common_line_vertical" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp16"
        android:text="@string/desc_bell_lock"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/iv_bellLock"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_height="156dp"
        android:layout_marginTop="120dp"
        android:src="@mipmap/img_bell_lock" />

    <TextView
        android:id="@+id/tv_bellLock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:text="@string/str_bellLock"
        android:textSize="@dimen/sp16" />
</LinearLayout>
