<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/settingTitles"
        layout="@layout/activity_actionbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp48" />

    <ImageView style="@style/common_line_vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp66"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="visible">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_weight="1"
            android:text="@string/bell_lowpower_mode"
            android:textColor="#000000"
            android:textSize="@dimen/sp16" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.meari.test.widget.SwitchButton
                android:id="@+id/switch_lowPowerMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp16"
                android:clickable="false" />
        </LinearLayout>

    </LinearLayout>

    <ImageView style="@style/common_line_vertical" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp10"
        android:layout_marginLeft="@dimen/dp16"
        android:layout_marginRight="@dimen/dp16"
        android:layout_marginTop="@dimen/dp10"
        android:text="@string/desc_bell_low_mode"
        android:textColor="@color/bottomGray"
        android:textSize="14sp"
        android:visibility="visible" />

    <ImageView style="@style/common_line_vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp66"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_weight="1"
            android:text="@string/bell_power_from"
            android:textColor="#000000"
            android:textSize="@dimen/sp16" />

        <TextView
            android:id="@+id/tv_powerFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp16"
            android:text="----" />
    </LinearLayout>

    <ImageView style="@style/common_line_vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp66"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_weight="1"
            android:text="@string/bell_power_overplus"
            android:textColor="#000000"
            android:textSize="@dimen/sp16" />

        <TextView
            android:id="@+id/tv_powerOverpluse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp16"
            android:text="----" />
    </LinearLayout>

    <ImageView style="@style/common_line_vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp30"
        android:gravity="center_vertical|right"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_dayOverplus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp16"
            android:text="@string/bell_expect_day"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>
